Fixed canvas overflow

--- a/sass/page-editor.scss
+++ b/sass/page-editor.scss
@@ -17,6 +17,7 @@ editor{
     }
     .mainContainer{
       flex: 1;
+      position: relative;
       background-color: #b6b7b7;
       text-align: center;
     }
