--- a/sass/visor.scss
+++ b/sass/visor.scss
@@ -1,10 +1,16 @@
 visor{
   display: block;
-  width: 100%;
   height: 100%;
+  max-height: 100%;
+  width: 100%;
+  max-width: 100%;
+  position: absolute;
 
   #canvas{
-    width: 100%;
     height: 100%;
+    max-height: 100%;
+    width: 100%;
+    max-width: 100%;
+    background-color: red;
   }
 }
